--- a/adhd.rmd
+++ b/adhd.rmd
@@ -289,7 +289,11 @@ tbl_long <- data.table::melt(tbl, id.vars = c("time"))
 ## curate
 tbl_long[, value_relative := value/max(value), by = .(variable)]
 
-p <- ggplot(tbl_long, aes(x=time, y=value_relative, group=variable, color=variable))
+tbl_long[, lty := "solid"]
+tbl_long[variable %in% c("methylphenidateimmediate", "methylphenidateextended"), lty := "dashed"]
+tbl_long$lty
+
+p <- ggplot(tbl_long, aes(x=time, y=value_relative, group=variable, color=variable, linetype = lty))
 ## p + geom_line()
 klockslag <- c(paste0("0", as.character(7:9)), as.character(10:24),
                paste0("0", as.character(1:7)))
@@ -300,7 +304,7 @@ p <- p + geom_smooth(method="auto", se=FALSE, fullrange=FALSE, span = 0.2) +
     theme_bw()
 p <- p + theme(legend.position = c(0.8, 0.8))
 
-p
+p + guides(lty = FALSE)
 
 ## pdf("adhd_medicinering_profiler.pdf")
 ## p
