--- a/adhd.rmd
+++ b/adhd.rmd
@@ -304,7 +304,7 @@ p <- p + geom_smooth(method="auto", se=FALSE, fullrange=FALSE, span = 0.2) +
     theme_bw()
 p <- p + theme(legend.position = c(0.8, 0.8))
 
-p + guides(lty = FALSE)
+p + guides(lty = FALSE) + theme(panel.grid.minor = element_blank())
 
 ## pdf("adhd_medicinering_profiler.pdf")
 ## p
