--- a/depression.rmd
+++ b/depression.rmd
@@ -1,5 +1,42 @@
 # Depression
 
+## Diagnoskriterier enligt ICD-10
+
+A. Att minst två av symtomen nedstämdhet, energifattigdom och minskad aktivitet dominerat under minst de senaste två veckorna.
+
+B. Att detta inte kan förklaras av annan kroppslig eller psykisk störning.
+
+C. Att minst ett av följande symtom också förekommer, eller totalt minst fyra symtom från A och C:
+
+- Förlust av självförtroende och självuppskattning 
+- Överdriven eller obefogad självkritik och nedvärdering av sig själv 
+- Återkommande tankar på död eller självmord 
+- All slags självskadande beteende 
+- Upplevd nedsättning av förmåga till tankeverksamhet och koncentration 
+- Vankelmod och beslutsångest 
+- Förändrad psykomotorisk aktivitet med minskad rörlighet eller agitation 
+- Sömnproblem (ökad eller försämrad sömn)
+- Ökad eller minskad matlust med medföljande effekt på vikten
+
+Vid lindrig depression är patienten i obalans men kan i allmänhet genomföra normala aktiviteter.
+
+För att måttlig egentlig depression ska föreligga krävs kriterier för lindrig depression samt minst sex symtom från A och C. Patienten är oftast så påverkad att även vardagliga sysslor är svåra att genomföra.
+
+För diagnosen svår egentlig depression krävs att alla tre symtomen från A och minst fem symtom från C föreligger. Patienten är funktionsnedsatt, har starka självförebråelser och självmordstankar samt ofta framträdande kroppsliga symtom bland de som redovisats under punkt C. 
+
+Depressionssjukdomen kännetecknas av Att vara episodisk. En episod är minst två veckor och vanligen 3 till 12 månader. Bara ca 10 procent varar längre än två år.
+
+## Medicinska differentialdiagnoser och basal utredning
+
+Rekommenderad provtagning vid depression:
+Hb, LPK, SR, CRP, Na, K, Krea, S-Ca, glukos, leverstatus, TSH, fritt T4, B12, folsyra. Vid misstanke om alkoholöverkonsumtion B-PEth. Blodtryck, hjärtauskultation och neurologiskt status. CT/MRT-hjärna och EEG med ledning av anamnestiska uppgifter eller fynd i somatiskt status.
+
+Neurologiska sjukdomar att överväga: Parkinsons sjukdom, multipel skleros, encefalit, epilepsi, hjärntumörer, cerebrovaskulära sjukdomar.
+
+Endokrina sjukdomar att överväga: Tyreoideasjukdomar, binjuresjukdomar, diabetes mellitus typ 2, andra endokrinologiska sjukdomar
+
+Övrigt: Anemi, b12/folsyra-brist, elektrolytrubbning (särskilt hos äldre personer), smärttillstånd, infektioner, läkemedelsbiverkningar, sömnapnésyndrom, celiaki, hypogonadism.
+
 ## Behandling
 
 Vilken behandling som rekommenderas i första hand beror vanligen på depressionens svårighetsgrad. Läkemedelsbehandling rekommenderas vid måttlig eller svår depressiv episod, och psykologisk behandling (psykoterapi, psykoedukation, självhjälp) vid lindrig depressiv episod [@Kennedy2016]. Det saknas stöd för att effekten av läkemedel skulle vara beroende av depressionens svårighetsgrad [REF] och läkemedelsbehandling kan vara ett alternativ även vid lindrig depression, exempelvis ifall patienten föredrar det. Likaså kan psykologisk behandling användas vid medelsvår depression om läkemedelsbehandling inte är aktuellt [?] [REF]. 
@@ -35,13 +72,11 @@ Olika antidepressiva läkemedel har liknande effektstorlek vid behandling av dep
   - Riskklassificering avseende arytmirisk (vid hög ålder, hjärt-kärlsjukdom mm) SE [TdP-kapitlet](#psykofarmakologi-tdp)
 - Enkelhet (antal doser, behov av monitorering)
 
-Vid samsjuklighet med ångestsyndrom eller 
-
 Biverkningsprofil och interaktioner med befintlig läkemedelsbehandling bör vägas in. Vid psykotiska symtom rekommenderas samtidig behandling med antipsykotiskt läkemedel. Vid sömnstörning kan mirtazapin, och agomelatin vara att föredra. Duloxetin kan ha smärtlindrande effekt. Vid samsjuklighet med ångestsyndrom kan ett läkemedel som har indikation för detta med fördel användas.
 
-viktnedgång
-
 **Framträdande ångest** vid en sepressiv episod kan defineras som förekomst minst två av följande: Känsla av att vara spänd, rastlöshet, koncentrationssvårigheter pga oro, rädsla för att något katastrofalt skall inträffa eller känsla av att man kommer att tappa kontrollen över sig själv. I dessa fall, eller om det föreligger samsjuklighet med något ångestsyndrom rekommenderas ett antidepressivt medel som har visad effekt vid generaliserat ångestsyndrom [@Dsm2013]. Någon skillnad mellan grupperna SSRI, SNRI, och bupropion har inte påvisats i detta avseende [@Kennedy2016].
+
+#### Samsjuklighet och subtyp av depression
 
 **Katatoni** vid depression bör föranleda behandling med bensodiazepiner [@Kennedy2016] och/eller ECT [REF].
 
@@ -59,11 +94,13 @@ Vid **sömnstörning** kan ett medel med positiv eller neutral effekt på sömne
 
 Vid **depression med somatiska symtom** är det främst samtidig förekomst av smärta som har studerats. Läkemedel som kan övervägas i dessa fall är duloxetin eller annan SNRI. Vid uttalad orkeslöshet bupropion eller SSRI. Vid låg energinivå duloxetin. Notera dock att jämförande studier saknas.
 
-<!-- For patients to meet the criteria of the anxious distress specifier, they must have 2 of the following 5 symptoms across an episode: 1) feeling keyed up or tense, 2) feeling unusually restless, 3) difficulty concentrating because of worry, 4) fear that something awful might happen, and 5) a feeling that one might lose control of himself/herself.2 -->
+<!-- For patients to meet the criteria of the anxious distress specifier, they must have 2 of the following 5 symptoms across an episode: 1. feeling keyed up or tense, 2. feeling unusually restless, 3. difficulty concentrating because of worry, 4. fear that something awful might happen, and 5. a feeling that one might lose control of himself/herself.2 -->
 
 <!-- Anxious destress, Se https://www.ajmc.com/view/with-anxiety-common-in-depression-dsm-5-specifier-aids-screening -->
 
 <!-- TODO: Kommentera behandligseffekt vid dystymi -->
+
+#### Första behandling
 
 Vid start av behandling där patienten inte har någon pågående antidepressiv behandling sedan tidigare kan exempelvis riktlinjerna från CANMAT tillämpas gällande förstahandsval (**Tabell \@ref(tab:depression-canmat-antidepressant-recommendation-first)**)
 
@@ -82,6 +119,12 @@ knitr::kable(tbl, caption = "Förstahandsval enligt CANMAT")
 Även om man inte kunnat påvisa några säkra skillnader i effekt mellan dessa preparat visade en stor metaanalys att vissa läkemedel tenderade att ge bättre respons och samtidigt god tolerabilitet [@Cipriani2018]. De läkemedel som tenderade att ligga bäst till avseende effekt och samtidigt ha god tolerabilitet (färre avslut av behandlingen) var agomelatin, escitalopram\*, venlafaxin\*, vortioxetin. Läkemedel med fördelaktig effekt men utan fördel avseende tolerabilitet var amitriptylin, mirtazapin\*, och paroxetin. Läkemedel med tendens till lägst effektivitet var fluoxetin, reboxetin, fluvoxamin och trazodon. 
 
 \*Markeringen med asterisk visar de som också i CANMAT-guidelines konstateras ha visst stöd för bättre effekt (där anges också sertralin som ett medel som visat fördel avseende effekt).
+
+#### Effektivitet {#antidepressant-efficacy}
+
+Selective serotonin reuptake inhibitors versus placebo in patients with major depressive disorder. A systematic review with meta-analysis and Trial Sequential Analysis [@Cipriani2018]
+
+Lägre efficacy hos äldre, se \@ref(depression-elderly).
 
 ```{r figure-cipriani, fig.cap = 'Forest plots of network meta-analysis of all trials for efficacy and acceptability'}
 
@@ -178,15 +221,15 @@ knitr::kable(tbl, caption = "Tredjehandsval enligt CANMAT")
 
 ``` 
 
-Se tabeller i CANMAT [@Kennedy2016]
+<!-- Se tabeller i CANMAT [@Kennedy2016] -->
 
-Förstahandsalternativ:
+<!-- Förstahandsalternativ: -->
 
-- SSRI
-- SNRI
-- Agomelatin
-- Bupropion
-- Mirtazapin
+<!-- - SSRI -->
+<!-- - SNRI -->
+<!-- - Agomelatin -->
+<!-- - Bupropion -->
+<!-- - Mirtazapin -->
 
 ### Uppföljning av behandlingseffekt
 
@@ -198,6 +241,14 @@ Uppföljning efter nyinsättning rekommenderas efter två veckor, och därefter 
 
 För utvärdering av effekt bör skattning av depressionssymtom med tex MADRS eller MADRS-S ingå som en del av bedömningen. Därutöver kan tex funktionsnivå och motoriska symtom behöva vägas in.
 
+### Monitorering
+
+Inför start av behandling kan blodprover och EKG vara aktuellt, beroende på vilken behandling som planeras. Agomelatin kräver monitorering av leverfunktion.
+
+Många antidepressiva läkemedel kan förläng QTT något. Vid riskfaktorer för Torsade de Point (TdP) rekommenderas EKG före behandling och en tid efter insättning (Se avsnitt \@ref(psykofarmakologi-tdp)).
+
+Hos äldre eller samtidig behandling med tiazid: Följ upp natrium (hyponatremirisk).
+
 ### Byte av antidepressiva
 
 Det finns ingen god vägledning huruvida byte inom eller mellan klasser skulle vara mer fördelaktigt. En strategi är därför att låta biverkningsproifilen avgöra. En metaanalys konstaterar:
@@ -206,33 +257,37 @@ Det finns ingen god vägledning huruvida byte inom eller mellan klasser skulle v
 
 För en praktisk vägledning hur doserna kan ned- och upptitreras vid byte se [Switching Antidepressants](https://wiki.psychiatrienet.nl/wiki/SwitchAntidepressants
 
-### Monitorering
+Dosering vid ut- och intitrering: Se tabell på [psychiatrinet](https://wiki.psychiatrienet.nl/wiki/Main_Page).
 
-Inför start av behandling kan blodprover och EKG vara aktuellt, beroende på vilken behandling som planeras.
+Vid biverkningar: Byte till annan klass har inget vetenskapligt stöd men är logiskt. Byte inom SSRI-klassen kan fungera. 
 
-Många antidepressiva läkemedel kan förläng QTT något. Vid riskfaktorer för Torsade de Point (TdP) rekommenderas EKG före behandling och en tid efter insättning. [TODO Se avsnitt TdP]
+Icke-respons efter 2-6 veckor förutsäger senare icke-respons. Byt efter 3-4 veckor vid helt utebliven effekt [@Maudsley2018, p265]. Om viss förbättring sker bör utvärdering ske efter ytterligare 3-4 veckor.
 
-## Antidepressiva
+Byte inom klass har visst stöd, men byte till annan klass stöds också av en del studier [@Maudsley2018, p265]. Byte till annat antidepressivt preparat har inte något säkert vetenskapligt stöd, möjligen undantaget byte till vortioxetin, och kombinationsbehandling eller tillägg av ett atypiskt antipsykotiskt medel har bättre stöd [@Maudsley2018, p265].
 
-Se även kapitel \@ref(psychopharmacology).
+<!-- Se även kapitel \@ref(psychopharmacology). -->
 
 <!-- Dosintervall, Se Which antidepressant doses are optimal? Fredrik Hieronymus: https://www.thelancet.com/journals/lanpsy/article/PIIS2215-0366(19)30221-4/fulltext -->
 
-### Effektivitet {#antidepressant-efficacy}
-
-Selective serotonin reuptake inhibitors versus placebo in patients with major depressive disorder. A systematic review with meta-analysis and Trial Sequential Analysis
-
-Ciprianis studie [@Cipriani2018]
-
-Lägre efficacy hos äldre, se \@ref(depression-elderly).
 
 ### Svårbehandlad depression
 
 <!-- STAR-D [@Howland2008a] -->
 
-CANMAT [@Kennedy2016]
+>The criteria included failure of treatment to reduce depressive severity by at least 50%, failure to reduce absolute depressive scores below a specific cut-off point or remission threshold, and failure to produce an asymptomatic state. In the studies reviewed, the minimum number and type of failed anti-depressant trials required to assess the presence of treatment resistance differed greatly [...] However, the basic definition of TRD that is emerging from the literature is an inadequate response to at least 2 antidepressant trials of adequate dose, duration, and treatment adherence [@Gaynes2009].
 
-#### Augmentationsbehandling 
+Överväg [@Gaynes2009]:
+
+- Följsamhet till behandling
+- Annan psykiatrisk samsjuklighet (ångestsyndrom, PTSD, OCD)
+- Alkohol- och drogbruk
+- Medicinsk samsjuklighet (tex kronisk smärta, migrän, demens, Parkinsons sjukdom, hypothyreos)
+- Samtidig läkemedelsbehandling (tex opioier, kortikosteroider, kalciumkanalblockare)
+- Subtyp av depression (bipolaritet, persisterande depression, atypisk depression, psykotiska symtom)
+
+Se CANMAT [@Kennedy2016]
+
+### Augmentationsbehandling 
 
 Se [@Taylor2020].
 
@@ -241,26 +296,43 @@ Se [@Taylor2020].
 tbl <- fread('../notes/antidepressant_augmentation.csv')
 kable(tbl, caption = "Augmentationsbehandling vid depression")
 
+## antal 1:a och 2:a handsval
+## tmp <- tbl[,.SD, .SDcols = !c('Läkemedel')]
+## tmp <- data.table::transpose( tmp )
+## odr <- lapply(tmp, function(x) sum(x == "1:a"))
+## odr <- unlist(odr)
+## tbl[, n_1a := odr]
+## odr <- lapply(tmp, function(x) sum(x == "2:a"))
+## odr <- unlist(odr)
+## tbl[, n_2a := odr]
+
 ``` 
+
+"Ja" innebär att läkemedlet ej specificerats som 1:a eller 2:a -handsval. "Nej" innebär att det ej rekommenderas.
+
 Atypiska antipsykotiska medel:
 
 > AAPs were first-line equivalents in NICE, specifically aripiprazole, olanzapine, quetiapine, and risperidone, though it was not clear that this list is exhaustive. NICE concluded that the evidence for clinical efficacy was “moderate” and cautioned that dropout and side-effect reports were more likely than for antidepressant monotherapy, particularly for quetiapine [@Taylor2020].
 
-Dosering: Aripiprazol 2–15 mg/d [@Taylor2020]. Kvetiapin 150–300 mg/d. Risperidon 1-3mg/d. Olanzapin 2.5–10 mg/d.
+Dosering: Aripiprazol 2–15 mg/d. Kvetiapin 150–300 mg/d. Risperidon 1-3mg/d. Olanzapin 2.5–10 mg/d [@Taylor2020]. Använd i första hand doser i lägre deen av intervallet.
 
 Litium:
 
 > The BAP recommended lithium as a first-line augmenter but cautioned that most studies augmented TCAs and the association with side effects.
 
-> Litium 600–1200 mg/d, dosing 1-2x p/d, aiming for “therapeutic serum levels” (not specified). Målkonc (0.4-)0.6–0.8(-1.2) mmol/L. If tolerated and effective, treatment should continue for at least an acute phase (typically 4–8 wk). Lithium should be maintained in combination with an antidepressant for at least 1 y to prevent relapse, though little available evidence in continuation phase. Routine use of lithium monotherapy in continuation phase not recommended. Gradual withdrawal tapered over at least 3 mo if treatment has been >6 mo.  If symptoms reoccur, maintenance dose of antidepressant and lithium should be resumed.
+Målkonc (dalvärde) är (0.4-)0.6–0.8(-1.2) mmol/L. Fortsätt minst 2-8 veckor och fortsätt minst ett år för återfallsprevention. Monoterapi rekommenderas ej. Gradvis nedtrappning över 3 månader om behandlingen pågått > 6 månader. Om symtomen återkommer återuppta litium i underhållsdos.
 
 Lamotrigin:
 
->BAP recommended lamotrigine as a second-line augmenter but stated that few studies support the use of anticonvulsants, citing trials showing limited efficacy. NICE did not recommend lamotrigine, carbamazepine, or valproate as they considered the evidence inadequate at the time of publication. TMAP offered the most comprehensive guidance for lamotrigine, recommending 25 mg/d for 2 weeks, increased to 50 mg/d for 2 weeks, then 100 mg/d for 1 week, with a maximum daily dose of 200 mg/d in the absence of enzyme inhibiting or inducing agents. TMAP did not discuss side effects but recommended that renal function and hepatic function tests should be conducted prior to lamotrigine treatment and repeated yearly if indicated. BAP recommended that lamotrigine should be continued for up to 1 year after remission, with long-term treatment considered for higher risk patients.
+25 mg/d i 2 veckor, öka till 50 mg/d i 2 veckor, sedan 100 mg/d i 1 vecka, med maxdos 200 mg/d i frånvaro av enzyminhibitorer eller -inducerare.
+
+>TMAP did not discuss side effects but recommended that renal function and hepatic function tests should be conducted prior to lamotrigine treatment and repeated yearly if indicated. 
+
+>BAP recommended that lamotrigine should be continued for up to 1 year after remission, with long-term treatment considered for higher risk patients.
 
 Bupropion:
 
->The MPG listed bupropion as a first-line augmenter for TRD, added to an SSRI. 150–300 mg/d.
+>I kombination med SSRI, 150–300 mg/d.
 
 Buspiron:
 
@@ -268,11 +340,13 @@ Buspiron:
 
 Thyroideahormon:
 
->TMAP recommended thyroid augmentation at both stage 1a and 2a of their algorithm. 25 mcg/d increased to 50 mcg/d after ~1 wk if response inadequate 
+Liotyronin 25 mkg/d, ökas till 50 mcg/d efter ~1 vecka vid otillräcklig respons. 
 
 Modafinil:
 
 >CANMAT recommended modafinil as a second-line adjunctive agent citing a meta-analysis of 4 MDD RCTs.
+
+FASS: Rekommenderad startdos är 200 mg dagligen. Doser upp till 400 mg i en dos eller två fördelade doser kan ges till patienter som svarar otillräckligt på den initiala 200 mg modafinildosen. Kontraindikationer är okontrollerad måttlig till svår hypertension eller hjärtarytmier.
 
 ### Kombinationsbehandling
 
@@ -288,7 +362,7 @@ Studier av kombinationsbehandling med två antidepressiva vid svårbehandlad dep
 
 I en metaanalys (n = 19364 patienter) såg man att effektiviteten för SSRI ökade i intervallet 20-40 mg fluoxetinekvivalenter, men att den däröver planade ut eller minskade. Tolerabiliteten (mätt som drop-outs) minskade vid högre doser i hela dosintervallet. För venlafaxin ökade effektiviteten upp till 75-150 mg och däröver sågs endast liten vinst med högre dos. För mirtazapin ökade effektiviteten upp till 30 mg och minskade vid högre doser. För både venlafaxin och mirtazapin bedömdes optimum ligga i lägre delen av de rekommenderade intervallen [@Furukawa2019]. Effektiviteten planar således ut vid 30–40 mg citalopram, 10–15 mg escitalopram, 20–30 mg fluoxetin, 20–30 mg paroxetin, och 75–100 mg sertralin, 30 mg mirtazapin, och 375 mg venlafaxin [@Hieronymus2019].
 
-Ekvivalenter som användes var (avrundat): fluoxetin 20, escitalopram 10, citalopram 20, paroxetin 20, sertralin 50, vanlafaxin 75, mirtazapin 25.
+Ekvivalenter som användes var (avrundat): fluoxetin 20, escitalopram 10, citalopram 20, paroxetin 20, sertralin 50, venlafaxin 75, mirtazapin 25.
 
 Sammanfattningsvis är låga till måttliga doser av SSRI optimala, se även  [@Dold2017].
 
@@ -314,30 +388,21 @@ max effektiv dos = där effektvinstan planar ut, optimal dos = balans mellan eff
 
 <!-- christensen Vortioxetine 20 mg/day in patients with major depressive disorder: updated analysis of efficacy, safety, and optimal timing of dose adjustment [@Christensen2021] -->
 
-### Switching
-
-Se tabell på [psychiatrinet](https://wiki.psychiatrienet.nl/wiki/Main_Page).
-
-### Vid biverkningar
-
-Byte till annan klass har inget vetenskapligt stöd men är logiskt. Byte inom SSRI-klassen kan fungera. 
-
-### Vid icke-respons
-
-Icke-respons efter 2-6 veckor förutsäger senare icke-respons. Byt efter 3-4 veckor vid helt utebliven effekt [@Maudsley2018, p265]. Om viss förbättring sker bör utvärdering ske efter ytterligare 3-4 veckor.
-
-Byte inom klass har visst stöd, men byte till annan klass stöds också av en del studier [@Maudsley2018, p265]. Byte till annat antidepressivt preparat har inte något säkert vetenskapligt stöd, möjligen undantaget byte till vortioxetin, och kombinationsbehandling eller tillägg av ett atypiskt antipsykotiskt medel har bättre stöd [@Maudsley2018, p265].
-
-STAR-D
-
 ### Effekt på enskilda depressionssymtom
 
-Eriksson et al
+Eriksson et al [@Hieronymus2018]
 
 ### Biverkningar
 
 Antidessiva kan ge tex hyperhidros (antikolinerg effekt), ökad blödningsrisk (SSRI), QT-tidsförlängning. Se avsnittet biverkningar.
 
+Bupropion ger mindre risk för sexuella biverkningar. Kontraindikation är förhöjd kramprisk.
+
+### Behandlingslängd
+
+Till fullständig remission och därefter 6-12 månader. Trappa sedan ut långsamt för att undvika utsättningssymtom.
+
+Två eller flera depressioner under en femårsperiod medför indikation för långtidsprofylax. Vid fortsatt behandling under 1-3 år halveras återfallsrisken. Återfallspreventiv psykoterapeutisk behandling bör övervägas.
 
 ## Depression i anslutning till förlossning
 
