--- a/bipolar.rmd
+++ b/bipolar.rmd
@@ -272,10 +272,16 @@ För att kartlägga förloppet kan en sk "Life chart" använadas, tex med vägle
 
 [Självrapporterad prospektiv Life chart, LCM - S/P](https://shc.uci.edu/sites/default/files/docs/NIMH.Mood_.Diary_.Pt_.Instructions.pdf)
 
+Manualerna ovan är självskattningar och innehåller även instruktioner om hur svårighetsgrad av mani/depression med mera definieras.
+
+**Översättning till svenska:**
+
+[Stämningsdagbok prospektiv](https://github.com/eeenilsson/psykiatriboken/bipolar_life_chart_prospective.pdf)
+
+[Stämningsdagbok retrospektiv](bipolar_life_chart_retrospective.pdf)
+
 [Stämningsdagbok instruktioner](./bipolar_life_chart_prospective_manual.pdf)
 
-
-Manualerna ovan är självskattningar och innehåller även instruktioner om hur svårighetsgrad av mani/depression med mera definieras.
 
 
 ### Prevalens av olika symtom vid manisk eller blandad episod
